# Kraken-Optical-Simulator

./: .gitignore  MANIFEST.in  README.md  TODO.md  pyproject.toml
KrakenOS/: BundleTrace.py  Display.py  GeometryBackend.py  MeshBlock.py  ParallelTrace.py  Prerequisites3D.py  RayKeeper.py  SetupClass.py  SurfClass.py  UDA.py  __init__.py
KrakenOS/Examples/: EXAMPLES_INDEX.md  Examp_Axicon.py  Examp_Axicon_And_Cylinder.py  Examp_Coating_Energy_Basics.py  Examp_CzernyTurner.py  Examp_Diffraction_Grating_Reflection.py  Examp_Diffraction_Grating_Reflection_Single.py  Examp_Diffraction_Grating_Transmission.py  Examp_Dispersion_By_AbbeNumber.py  Examp_Doublet_Lens-ParaxMatrix.py  Examp_Doublet_Lens.py  Examp_Doublet_Lens_3Dcolor.py  Examp_Doublet_Lens_CommandsSystem.py  Examp_Doublet_Lens_Cylinder.py  Examp_Doublet_Lens_NonSec-AR_Coating.py  Examp_Doublet_Lens_NonSec.py  Examp_Doublet_Lens_Pupil.py  Examp_Doublet_Lens_Pupil_Bundle.py  (+57 more)
docs/: README.md  architecture.md  capabilities.md  example_coverage.md  examples.md  examples_manual.md  maintenance_log.md
tests/: test_build_modes.py  test_build_modes_report.txt  test_bundle_transforms.py  test_examples_subset.py  test_examples_subset_report.txt  test_internormal_bundle.py  test_invalid_trace_results.py  test_parallel_trace.py  test_public_api.py  test_raykeeper_results.py  test_smoke.py  test_solvehit_bundle.py  test_trace_bundle.py  test_trace_performance_components.py
tools/: benchmark_parallel_trace.py  benchmark_solvehit_bundle.py  benchmark_trace_bundle.py  generate_example_images.py  generate_examples_manual.py
(+12 files in other folders)
